test/org/midica/testfiles/failing/eff-cd-src-unknown-1.midica
INCLUDE inc/instruments.midica

0: ctrl_dest
0:   .src(voll)
0:   .dest(vol,10%)
0:   .on()

